# DSA

./: 07-ReverseInteger.py  CMakeLists.txt  STL.cpp  postorder.py  preorder.py
Array's/: deletion.py  patterncheck.py  removefirstoccurence.py
Array/C++/: ArrayIntro.cpp  ArrayShifts.cpp  Bhatija.cpp  BinarySearch 2.cpp  GreatestelementinArray.cpp  Insertionsort.cpp  LinearSearch.cpp  thirdhighestinarray.cpp
Array/Python/: ArrayADT.py  ArrayRotation.py  GridLocked.py  SecondMaxMininOddEven.py  extendingarray.py  highestproductpair.py  khushi.py  lti.py  missingnumber.py  occurencecount.py
CodilityLessons/: BinaryGap.py  CyclicRotation.py  countperm.py  oddoccurenceunpaired.py
Companies-Aligned/DE Shaw/: BankofSpain.py
Companies-Aligned/Microsoft Codility/: countDiv.py  frogjump.py  frogriverone.py  longestsubstring.py  maxcounters.py  missingnum.py  passingcars.py  tapeequillibrium.py  visitcountries.py
Companies-Aligned/Twitter'21 hiring Questions/: ArrayGame TWITTER.py  ConferenceScheduled  TWITTER.py  bracketbalanced TWITTER.py  closest numbers TWITTER.py  diskSpaceAnalysis TWITTER.py  howmanysentences TWITTER.py  maxswaps KD.py  productdefects TWITTER.py  stringReduction TWITTER.py
DE Shaw/: NuclearDestruction.py
Leetcode/: 01-TwoSum.py  04-MedianofTwoSortedArrays.py  07-ReverseInteger.py  1-TwoSum.py  14-LongestCommonPrefix.py  21-merge2sortedlist.py
Leetcode-Python/: 01-TwoSum.py  02-AddTwoNumbers.py  03-LongestSubstringWithoutRepeatingCharacters.py  05-LongestPalindromicSubstring.py  09-PlindromeNumber.py  10-RegExMatching.py  11-ContainerofWater.py  121-BestTimetoBuyandSellStock.py  1647-minDeletions.py  189-RotateArray.py  19-RemoveNthNodeFromEndofList.py  19-Removenthfromend.py  20-ValidParanthesis.py  206-ReverseLinkedList.py  21-MergeTwoSortedLists.py  33-SearchinRotatedSortedArray.py  35-SearchInsertPosition.py  412-FizzBuzz.py  53-MaximumSubarray.py  75-SortColors.py  88-MergeSortedArray.py
Linked List/: newnodeatend.py
LinkedList/C++/: deletinginalinkedlist.cpp  linkedlist.cpp
LinkedList/Python/: AllOperations.py  checkLoopinLL.py  newnodeatpos.py  reversingLL.py
Logical/C++/: AbsoluteSumofArray.cpp  AddNums.cpp  AreaOfFigures.cpp  ArmstrongNumber.cpp  Calculator.cpp  DataHiding.cpp  Fibonacci.cpp  Overloading.cpp  PrimeNumbers.cpp  RecursiveFactorial.h  SumofNaturalNumbers.cpp  TaylorSeries.cpp  TowerOfHanoi.cpp  demo.cpp  lowertriangle.cpp  yoo.cpp
Logical/Python/: accenture.py  amit.py  hh.py  mili.py  mishra.py  phodi.py
LoveBabbar-DSA-Sheet/: 1-ReverseTheArray.py  2-MaxMin.py  3-KthSmallestElement.py
Others/: 4-Sort.py
Topic-Wise/Array/C++/: ArrayADT.cpp  ArrayReverse.cpp  BinarySearch.cpp  Operationon2dmatrix.cpp  SumOfArrayElements.cpp  insertinginSortedArray.cpp
Topic-Wise/Array/Python/: 2dArray.py  AbsoluteofArray.py  Alfredinmcd.py  ArrayOperations.py  BinarySearch.py  Inserting.py  Insertion Sort.py  MaxMin.py  Print Squares.py  QuickSort.py  Race.py  RecursiveBinarySearch.py  RepeatedNumber.py  RightRotation.py  appendinarray.py  displayarray.py  elemntsofUnsort.py  findingduplicates.py  maxmeanmedian.py  pickfrombothside.py  plusMinus.py  plusone.py  removingduplicates.py  reversearray.py
Topic-Wise/LinkedList/C++/: AllOperations-Singly.cpp  InsertinginLL.cpp  loopinLL.cpp  mergeLLs.cpp  removingduplicatesinLL.cpp
Topic-Wise/LinkedList/Python/: AllOperations.py  LinkedListAllOperations.py  chechsorted.py  circularLL.py  deletion.py  display.py  insertinginsortedLL.py  megingLL's.py  newnodeatbegin.py  removingduplicates.py
Topic-Wise/Logical/C++/:  PerfectNumber.cpp  Complex.cpp  Conditional.cpp  Diagonal.cpp  DiffInputs.cpp  DigitsinReverse.cpp  Discounts.cpp  DisplayGrades.cpp  Exceptions.cpp  Factorial.cpp  Factors.cpp  FileHandling.cpp  FriendfunctionOverloading.cpp  GCD.cpp  (+25 more)
Topic-Wise/Trees/: countingtemplate.py  insertinbst.py  levelorder.py  searchinbst.py
Trees/: Alloperations.py  BinarySearchTree.py  CreationBT.py  inorder.py  levelorder.py  preorder.py
Twitter'21 hiring Questions/: BirthdayCardCollections TWITTER.py  evenSubArray TWITTER.py  sign-in-sign-out TWITTER.py
(+52 files in other folders)
