cmake_minimum_required(VERSION 3.20)
project(DSA)

set(CMAKE_CXX_STANDARD 14)

include_directories(Topic-Wise/Logical/C++)

add_executable(DSA

         Topic-Wise/Recursion/C++/permutations.cpp)
#Topic-Wise/LinkedList/C++/deletinginalinkedlist.cpp
#Topic-Wise/LinkedList/C++/AllOperations-Singly.cpp
#        Topic-Wise/Array/C++/ArrayIntro.cpp
#        Topic-Wise/Array/C++/ArrayReverse.cpp
#        Topic-Wise/Array/C++/ArrayShifts.cpp
#        Topic-Wise/Array/C++/Bhatija.cpp
#        "Topic-Wise/Array/C++/BinarySearch 2.cpp"
#        Topic-Wise/Array/C++/BinarySearch.cpp
#        Topic-Wise/Array/C++/GreatestelementinArray.cpp
#        Topic-Wise/Array/C++/insertinginSortedArray.cpp
#        Topic-Wise/Array/C++/Insertionsort.cpp
#        Topic-Wise/Array/C++/LinearSearch.cpp
#        Topic-Wise/Array/C++/Operationon2dmatrix.cpp
#        Topic-Wise/Array/C++/SumOfArrayElements.cpp
#        Topic-Wise/Array/C++/thirdhighestinarray.cpp
#        Topic-Wise/LinkedList/C++/deletinginalinkedlist.cpp
#        Topic-Wise/LinkedList/C++/InsertinginLL.cpp
#        Topic-Wise/LinkedList/C++/linkedlist.cpp
#        Topic-Wise/LinkedList/C++/loopinLL.cpp
#        Topic-Wise/LinkedList/C++/mergeLLs.cpp
#        Topic-Wise/LinkedList/C++/removingduplicatesinLL.cpp
#        "Topic-Wise/Logical/C++/ PerfectNumber.cpp"
#        Topic-Wise/Logical/C++/AbsoluteSumofArray.cpp
#        Topic-Wise/Logical/C++/AddNums.cpp
#        Topic-Wise/Logical/C++/AreaOfFigures.cpp
#        Topic-Wise/Logical/C++/ArmstrongNumber.cpp
#        Topic-Wise/Logical/C++/bathla.cpp
#        Topic-Wise/Logical/C++/Calculator.cpp
#        Topic-Wise/Logical/C++/Complex.cpp
#        Topic-Wise/Logical/C++/Conditional.cpp
#        Topic-Wise/Logical/C++/conferencescheduletwitter.cpp
#        Topic-Wise/Logical/C++/DataHiding.cpp
#        Topic-Wise/Logical/C++/demo.cpp
#        Topic-Wise/Logical/C++/Diagonal.cpp
#        Topic-Wise/Logical/C++/DiffInputs.cpp
#        Topic-Wise/Logical/C++/DigitsinReverse.cpp
#        Topic-Wise/Logical/C++/Discounts.cpp
#        Topic-Wise/Logical/C++/DisplayGrades.cpp
#        Topic-Wise/Logical/C++/Exceptions.cpp
#        Topic-Wise/Logical/C++/Factorial.cpp
#        Topic-Wise/Logical/C++/Factors.cpp
#        Topic-Wise/Logical/C++/Fibonacci.cpp
#        Topic-Wise/Logical/C++/FileHandling.cpp
#        Topic-Wise/Logical/C++/foo.cpp
#        Topic-Wise/Logical/C++/FriendfunctionOverloading.cpp
#        Topic-Wise/Logical/C++/GCD.cpp
#        Topic-Wise/Logical/C++/IntroToClass.cpp
#        Topic-Wise/Logical/C++/khushi.cpp
#        Topic-Wise/Logical/C++/lowertriangle.cpp
#        Topic-Wise/Logical/C++/main.cpp
#        Topic-Wise/Logical/C++/manas.cpp
#        Topic-Wise/Logical/C++/Memoization.cpp
#        Topic-Wise/Logical/C++/MergeTechnique.cpp
#        Topic-Wise/Logical/C++/MultiplicationTable.cpp
#        Topic-Wise/Logical/C++/Overloading.cpp
#        Topic-Wise/Logical/C++/Palindrome.cpp
#        Topic-Wise/Logical/C++/ParameterPassing.cpp
#        Topic-Wise/Logical/C++/Patterns.cpp
#        Topic-Wise/Logical/C++/Pointers.cpp
#        Topic-Wise/Logical/C++/PointerToFunction.cpp
#        Topic-Wise/Logical/C++/PrimeNumbers.cpp
#        Topic-Wise/Logical/C++/RectangleExtendsToCuboid.cpp
#        Topic-Wise/Logical/C++/RectangleTemplate.cpp
#        Topic-Wise/Logical/C++/RecurrenceRelation.cpp
#        Topic-Wise/Logical/C++/RecursiveFactorial.cpp
#        Topic-Wise/Logical/C++/RecursiveFactorial.h
#        Topic-Wise/Logical/C++/RootsofQuadratic.cpp
#        Topic-Wise/Logical/C++/SumofNaturalNumbers.cpp
#        Topic-Wise/Logical/C++/sumofNrecurssion.cpp
#        Topic-Wise/Logical/C++/SwitchCase.cpp
#        Topic-Wise/Logical/C++/TaylorSeries.cpp
#        Topic-Wise/Logical/C++/Templates.cpp
#        Topic-Wise/Logical/C++/testt.cpp
#        Topic-Wise/Logical/C++/TowerOfHanoi.cpp
#        Topic-Wise/Logical/C++/TypesOfConstructors.cpp
#        Topic-Wise/Logical/C++/WhileLoops.cpp
#        Topic-Wise/Logical/C++/yoo.cpp
